--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "uvicorn>=0.35.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
+    "bcrypt==4.3.0",
     "python-multipart>=0.0.9",
     "crudadmin>=0.4.2",
     "itsdangerous>=2.2.0",
